# hello-dioxus

./: .gitignore  Cargo.toml  README.md  package.json  tailwind.config.js
src/: main.css  main.rs  prelude.rs
src/components/: button.rs
src/routes/: mod.rs
src/routes/counter/: mod.rs
src/routes/files/: file_row.rs  mod.rs
