[package]
name = "hello-dioxus"
version = "0.1.0"
edition = "2021"
description = "A simple app to say hello to Dioxus."

[package.metadata.bundle]
name = "hello-dioxus"
identifier = "ai.hyperbloom.hello-dioxus"
version = "0.1.0"
copyright = "Copyright (c) 2023"
category = "public.app-category.educational-games"
short_description = "A simple app to say hello to Dioxus."
long_description = "A simple app to say helloooooooooooooooooooooooooooooooooo to Dioxus."

[package.metadata.commands]
dev = { cmd = ["cargo cmd watch_tailwind", "cargo cmd watch_dioxus"], parallel = true }
build = ["cargo cmd build_tailwind","cargo cmd build_dioxus"]
preview = ["cargo cmd build_tailwind","cargo cmd preview_dioxus"]
setup = ["cargo install cargo-watch --version 8.4.0 --root ./target/.cargo_install", "cargo install cargo-bundle --version 0.6.0 --root ./target/.cargo_install", "yarn --modules-folder ./target/node_modules"]
watch_tailwind = "yarn --modules-folder ./target/node_modules tailwindcss -i ./src/main.css -o ./target/tailwind/built.css --watch"
watch_dioxus = "./target/.cargo_install/bin/cargo-watch -x run"
build_tailwind = "yarn --modules-folder ./target/node_modules tailwindcss -i ./src/main.css -o ./target/tailwind/built.css"
build_dioxus = "./target/.cargo_install/bin/cargo-bundle bundle --release"
preview_dioxus = "./target/.cargo_install/bin/cargo-bundle bundle"

[dependencies]
dioxus = "0.3.2"
dioxus-desktop = "0.3.0"
dioxus-router = "0.3.0"
